--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,14 @@
+:root{
+  --primary-color: #E4B1F0;
+  --secondary-color: #FFE1FF;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  /* background-image: radial-gradient(farthest-side at 60% 20%, var(--secondary-color), var(--primary-color)); */
+  /* background-color: teal;
+  width: 100%;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding: 12px;
+  box-sizing: border-box; */
 }
