--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,7 +2,6 @@
     display: flex;
     align-items: center;
     width: 100%;
-    background-color: red;
     height: 50px;
 }
 
@@ -20,12 +19,14 @@
     margin-right: 10px;
     padding: 5px;
     box-sizing: border-box;
-    transition: transform .2s linear;
+    transition: transform .2s linear, opacity .1s linear;
+    opacity: 0;
     transform: translateX(150%);
 }
 
 .searchBx.active{
     transform: translateX(0);
+    opacity: 1;
 }
 
 .searchInput{
@@ -37,6 +38,9 @@
     font-size: 20px;
     font-weight: 500;
 }
+::placeholder {
+    color: white;
+  }
 
 .optionBx{
     display: flex;
@@ -44,7 +48,6 @@
     height: 100%;
     z-index: 20;
     width: 500px;
-    background-color: rgb(46, 232, 232);
     justify-content: space-evenly;
 }
 
