--- a/src/components/StudentCard.css
+++ b/src/components/StudentCard.css
@@ -5,7 +5,7 @@ span{
 .studenCard{
     width: 350px;
     height: 200px;
-    background-color: cadetblue;
+    background-color: #FFE1FF;
     border-radius: 15px;
     box-sizing: border-box;
     padding: 10px;
