--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -21,7 +21,7 @@
     box-sizing: border-box;
     transition: transform .2s linear, opacity .1s linear;
     opacity: 0;
-    transform: translateX(150%);
+    transform: translateY(-150%);
 }
 
 .searchBx.active{
@@ -65,4 +65,26 @@
 .options.active{
     background-color: #7E60BF;
     color: white;
+}
+
+.sideMenu{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 150px;
+    top: 70px;
+    left: 0;
+    background-color: #433878;
+    color: white;
+    font-weight: 500;
+    font-size: 20px;
+    overflow: hidden;
+    transform: translateY(-150%);
+    transition: transform .2s linear;
+}
+
+.sideMenu.active{
+    transform: translateY(0);
 }
